Page title change

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>new2</title>
+    <title>Snakes Multiplayer</title>
   </head>
   <body>
     <div id="app"></div>
