--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Snakes Multiplayer</title>
+    <script src="/timesync/timesync.js"></script> 
   </head>
   <body>
     <div id="app"></div>
